@@ -8,10 +8,8 @@ import java.time.Instant;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
@@ -29,15 +27,11 @@ import de.tum.cit.aet.artemis.account.domain.User;
 import de.tum.cit.aet.artemis.assessment.domain.AssessmentType;
 import de.tum.cit.aet.artemis.assessment.domain.ExampleSubmission;
 import de.tum.cit.aet.artemis.assessment.domain.Feedback;
-import de.tum.cit.aet.artemis.assessment.domain.GradingCriterion;
 import de.tum.cit.aet.artemis.assessment.domain.Result;
-import de.tum.cit.aet.artemis.assessment.dto.ResultWithPointsPerGradingCriterionDTO;
 import de.tum.cit.aet.artemis.assessment.dto.tutor.TutorLeaderboardAssessmentsDTO;
 import de.tum.cit.aet.artemis.core.domain.DomainObject;
 import de.tum.cit.aet.artemis.core.dto.DueDateStat;
 import de.tum.cit.aet.artemis.core.repository.base.ArtemisJpaRepository;
-import de.tum.cit.aet.artemis.core.util.RoundingUtil;
-import de.tum.cit.aet.artemis.course.domain.Course;
 import de.tum.cit.aet.artemis.exercise.domain.Exercise;
 import de.tum.cit.aet.artemis.exercise.domain.Submission;
 import de.tum.cit.aet.artemis.programming.domain.ProgrammingExercise;
@@ -140,6 +134,9 @@ public interface ResultRepository extends ArtemisJpaRepository<Result, Long> {
     @EntityGraph(type = LOAD, attributePaths = { "feedbacks", "feedbacks.testCase" })
     List<Result> findResultsWithFeedbacksAndTestCaseByIdIn(List<Long> ids);
 
+    @EntityGraph(type = LOAD, attributePaths = { "feedbacks", "feedbacks.testCase", "assessor" })
+    List<Result> findResultsWithFeedbacksTestCaseAndAssessorByIdIn(Collection<Long> ids);
+
     /**
      * Get the latest results for each programming exercise student participation in an exercise from the database together with the list of feedback items.
      *
@@ -150,7 +147,7 @@ public interface ResultRepository extends ArtemisJpaRepository<Result, Long> {
         List<Long> ids = findLatestAutomaticResultsForExercise(exerciseId).stream().map(DomainObject::getId).toList();
 
         if (ids.isEmpty()) {
-            return Collections.emptyList();
+            return List.of();
         }
 
         return findResultsWithFeedbacksAndTestCaseByIdIn(ids);
@@ -180,6 +177,9 @@ public interface ResultRepository extends ArtemisJpaRepository<Result, Long> {
 
     @EntityGraph(type = LOAD, attributePaths = { "feedbacks", "feedbacks.testCase", "submission" })
     Optional<Result> findResultWithSubmissionAndFeedbacksTestCasesById(long resultId);
+
+    @EntityGraph(type = LOAD, attributePaths = { "submission", "submission.participation" })
+    Optional<Result> findResultWithSubmissionAndParticipationById(long resultId);
 
     /**
      * Finds the first result by participation ID, including its submission, feedback, and test cases, ordered by completion date in descending order.
@@ -783,54 +783,12 @@ public interface ResultRepository extends ArtemisJpaRepository<Result, Long> {
                 totalPoints = feedback.computeTotalScore(totalPoints, gradingInstructions);
             }
             else {
-                // in case no structured grading instruction was applied on the assessment model we just sum the feedback credit
-                // TODO: what happens if getCredits is null?
-                totalPoints += feedback.getCredits();
+                // in case no structured grading instruction was applied on the assessment model we just sum the feedback credit.
+                // A comment-only feedback carries no credits (null); treat it as 0 so score calculation (e.g. during re-evaluation) does not fail.
+                totalPoints += Objects.requireNonNullElse(feedback.getCredits(), 0.0);
             }
         }
         return totalPoints;
-    }
-
-    /**
-     * Calculates the sum of points of all feedbacks. Additionally, computes the sum of points of feedbacks belonging to the same {@link GradingCriterion}.
-     * Points are rounded as defined by the course settings.
-     *
-     * @param result for which the points should be summed up.
-     * @param course with the exercise the result belongs to.
-     * @return the result together with the total points and the points per criterion.
-     */
-    default ResultWithPointsPerGradingCriterionDTO calculatePointsPerGradingCriterion(final Result result, final Course course) {
-        final Map<Long, Double> pointsPerCriterion = new HashMap<>();
-        final Map<Long, Integer> gradingInstructionsUseCount = new HashMap<>();
-
-        for (final Feedback feedback : result.getFeedbacks()) {
-            final double feedbackPoints;
-            final Long criterionId;
-
-            if (feedback.getGradingInstruction() != null) {
-                feedbackPoints = feedback.computeTotalScore(0, gradingInstructionsUseCount);
-                criterionId = feedback.getGradingInstruction().getGradingCriterion().getId();
-            }
-            else {
-                feedbackPoints = feedback.getCredits() != null ? feedback.getCredits() : 0;
-                criterionId = null;
-            }
-
-            pointsPerCriterion.compute(criterionId, (_, oldPoints) -> (oldPoints == null) ? feedbackPoints : oldPoints + feedbackPoints);
-        }
-
-        final double totalPoints = RoundingUtil.roundScoreSpecifiedByCourseSettings(pointsPerCriterion.values().stream().mapToDouble(points -> points).sum(), course);
-
-        // points for feedbacks without criterion were only needed for totalPoints calculation
-        pointsPerCriterion.remove(null);
-
-        // round the point sums per criterion once at the end
-        pointsPerCriterion.entrySet().forEach(entry -> {
-            Double rounded = RoundingUtil.roundScoreSpecifiedByCourseSettings(entry.getValue(), course);
-            entry.setValue(rounded);
-        });
-
-        return new ResultWithPointsPerGradingCriterionDTO(result, totalPoints, pointsPerCriterion);
     }
 
     /**
