@@ -2,7 +2,6 @@ package de.tum.cit.aet.artemis.atlas.service.competency;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -183,8 +182,8 @@ public class CourseCompetencyService {
         final String semester = StringUtils.isEmpty(search.getSemester()) ? null : search.getSemester();
 
         final Page<CourseCompetency> competencyPage;
-        competencyPage = courseCompetencyRepository.findForImportAndUserHasAccessToCourse(title, description, courseTitle, semester, user.getGroups(),
-                authCheckService.isAdmin(user), pageable);
+        competencyPage = courseCompetencyRepository.findForImportAndUserHasAccessToCourse(title, description, courseTitle, semester, user.getId(), authCheckService.isAdmin(user),
+                pageable);
         return new SearchResultPageDTO<>(competencyPage.getContent(), competencyPage.getTotalPages());
     }
 
@@ -409,7 +408,7 @@ public class CourseCompetencyService {
                 lectureUnit.setCompletedUsers(Set.of(completions.get(lectureUnit.getId())));
             }
             else {
-                lectureUnit.setCompletedUsers(Collections.emptySet());
+                lectureUnit.setCompletedUsers(Set.of());
             }
         });
 
@@ -433,7 +432,7 @@ public class CourseCompetencyService {
                 competency.setUserProgress(Set.of(progress.get(competency.getId())));
             }
             else {
-                competency.setUserProgress(Collections.emptySet());
+                competency.setUserProgress(Set.of());
             }
         });
 
