@@ -3,7 +3,6 @@ package de.tum.cit.aet.artemis.exercise.domain;
 import java.time.Duration;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
@@ -84,15 +83,12 @@ public abstract class Submission extends DomainObject implements Comparable<Subm
     @ManyToOne
     private Participation participation;
 
-    // No @Cache: appended on every save; NONSTRICT produced stale version lists for concurrent readers, same class of bug as #12574.
     @JsonIgnore
     @OneToMany(mappedBy = "submission", cascade = CascadeType.REMOVE)
     private Set<SubmissionVersion> versions = new HashSet<>();
 
     /**
      * A submission can have multiple results, therefore, results are persisted and removed with a submission.
-     * CacheStrategy.NONSTRICT_READ_WRITE leads to problems with the deletion of a submission, because first the results
-     * are deleted in a transactional method.
      */
     @OneToMany(mappedBy = "submission", fetch = FetchType.LAZY, cascade = CascadeType.ALL, orphanRemoval = true)
     @OrderColumn(name = "results_order")
@@ -131,7 +127,7 @@ public abstract class Submission extends DomainObject implements Comparable<Subm
     @Nullable
     @JsonIgnore
     public Result getLatestResult() {
-        Result latestResult = Optional.ofNullable(results).orElse(Collections.emptyList()).stream().filter(Objects::nonNull).max(Comparator.comparing(Result::getId)).orElse(null);
+        Result latestResult = Optional.ofNullable(results).orElse(List.of()).stream().filter(Objects::nonNull).max(Comparator.comparing(Result::getId)).orElse(null);
 
         if (latestResult != null) {
             latestResult.setSubmission(this);
@@ -150,7 +146,7 @@ public abstract class Submission extends DomainObject implements Comparable<Subm
     @Nullable
     @JsonIgnore
     public Result getLatestCompletedResult() {
-        Result latestResult = Optional.ofNullable(results).orElse(Collections.emptyList()).stream().filter(result -> result != null && result.getCompletionDate() != null)
+        Result latestResult = Optional.ofNullable(results).orElse(List.of()).stream().filter(result -> result != null && result.getCompletionDate() != null)
                 .max(Comparator.comparing(Result::getCompletionDate)).orElse(null);
 
         if (latestResult != null) {
@@ -285,10 +281,26 @@ public abstract class Submission extends DomainObject implements Comparable<Subm
     @Nullable
     @JsonIgnore
     public Result getFirstManualResult() {
-        if (results != null && !results.isEmpty()) {
-            return this.getManualResults().getFirst();
-        }
-        return null;
+        // Guard on the manual results, not on all results: a submission can carry only automatic or Athena results, and
+        // getFirst() on the then empty manual list would throw instead of returning null as declared.
+        List<Result> manualResults = results == null ? List.of() : getManualResults();
+        return manualResults.isEmpty() ? null : manualResults.getFirst();
+    }
+
+    /**
+     * Get the last manual result of the submission, i.e. the newest correction round.
+     * <p>
+     * Deliberately different from {@link #getLatestResult()}, which returns the result with the highest id and therefore
+     * can return an automatic or Athena result. Operations that act on what a tutor is assessing have to use this one,
+     * because automatic results are not correction rounds and never carry an assessor.
+     *
+     * @return a {@link Result} or null if the submission has no manual result
+     */
+    @Nullable
+    @JsonIgnore
+    public Result getLatestManualResult() {
+        List<Result> manualResults = results == null ? List.of() : getManualResults();
+        return manualResults.isEmpty() ? null : manualResults.getLast();
     }
 
     /**
