@@ -17,11 +17,11 @@ import org.springframework.web.util.UriComponentsBuilder;
 
 import de.tum.cit.aet.artemis.atlas.domain.competency.Competency;
 import de.tum.cit.aet.artemis.core.exception.BadRequestAlertException;
-import de.tum.cit.aet.artemis.course.domain.Course;
 import de.tum.cit.aet.artemis.course.repository.CourseRepository;
 import de.tum.cit.aet.artemis.exercise.domain.Exercise;
 import de.tum.cit.aet.artemis.exercise.domain.IncludedInOverallScore;
 import de.tum.cit.aet.artemis.exercise.repository.ExerciseRepository;
+import de.tum.cit.aet.artemis.iris.api.IrisSettingsApi;
 import de.tum.cit.aet.artemis.lecture.api.LectureRepositoryApi;
 import de.tum.cit.aet.artemis.lecture.config.LectureApiNotPresentException;
 import de.tum.cit.aet.artemis.lecture.domain.Lecture;
@@ -52,13 +52,16 @@ public class LtiDeepLinkingService {
 
     private final Optional<LectureRepositoryApi> lectureRepositoryApi;
 
+    private final Optional<IrisSettingsApi> irisSettingsApi;
+
     private final Lti13TokenRetriever tokenRetriever;
 
     public LtiDeepLinkingService(CourseRepository courseRepository, ExerciseRepository exerciseRepository, Optional<LectureRepositoryApi> lectureRepositoryApi,
-            Lti13TokenRetriever tokenRetriever) {
+            Optional<IrisSettingsApi> irisSettingsApi, Lti13TokenRetriever tokenRetriever) {
         this.courseRepository = courseRepository;
         this.exerciseRepository = exerciseRepository;
         this.lectureRepositoryApi = lectureRepositoryApi;
+        this.irisSettingsApi = irisSettingsApi;
         this.tokenRetriever = tokenRetriever;
     }
 
@@ -158,16 +161,16 @@ public class LtiDeepLinkingService {
     }
 
     /**
-     * Prepares a content item for launching the Iris analytics dashboard.
+     * Prepares a content item for launching the Iris course chat.
      */
     private List<LtiContentItem> populateIrisContentItems(long courseId) {
-        Optional<Course> courseOpt = courseRepository.findById(courseId);
-        if (courseOpt.isPresent() && courseOpt.get().getStudentCourseAnalyticsDashboardEnabled()) {
-            String launchUrl = buildContentUrl(courseId, "dashboard");
+        boolean irisEnabled = irisSettingsApi.map(api -> api.isIrisEnabledForCourse(courseId)).orElse(false);
+        if (irisEnabled) {
+            String launchUrl = buildContentUrl(courseId, "iris");
             return List.of(createSingleUnitContentItem(launchUrl));
         }
         else {
-            throw new BadRequestAlertException("Course Analytics Dashboard not activated", "LTI", "noCourseAnalyticsDashboard");
+            throw new BadRequestAlertException("Iris is not enabled for this course", "LTI", "irisNotEnabled");
         }
     }
 
@@ -273,17 +276,17 @@ public class LtiDeepLinkingService {
      * Build a content URL for deep linking.
      */
     private String buildContentUrl(long courseId, String resourceType, String resourceId) {
-        return String.format("%s/courses/%s/%s/%s", artemisServerUrl, courseId, resourceType, resourceId);
+        return "%s/courses/%s/%s/%s".formatted(artemisServerUrl, courseId, resourceType, resourceId);
     }
 
     private String buildContentUrl(long courseId, String resourceType) {
-        return String.format("%s/courses/%s/%s", artemisServerUrl, courseId, resourceType);
+        return "%s/courses/%s/%s".formatted(artemisServerUrl, courseId, resourceType);
     }
 
     private String buildGroupedResourceUrl(long courseId, Set<Long> ids, String pathSegment, String queryParamKey, String alertKey) {
         long smallestId = ids.stream().min(Long::compareTo).orElseThrow(() -> new BadRequestAlertException("No IDs provided", "LTI", alertKey));
 
-        String baseUrl = String.format("%s/courses/%s/%s/%d", artemisServerUrl, courseId, pathSegment, smallestId);
+        String baseUrl = "%s/courses/%s/%s/%d".formatted(artemisServerUrl, courseId, pathSegment, smallestId);
         String joinedIds = ids.stream().map(String::valueOf).collect(Collectors.joining(","));
 
         return UriComponentsBuilder.fromUriString(baseUrl).queryParam("isMultiLaunch", true).queryParam(queryParamKey, joinedIds).toUriString();
