@@ -28,6 +28,7 @@ import de.tum.cit.aet.artemis.assessment.repository.ResultRepository;
 import de.tum.cit.aet.artemis.core.exception.EntityNotFoundException;
 import de.tum.cit.aet.artemis.core.security.SecurityUtils;
 import de.tum.cit.aet.artemis.exercise.domain.Exercise;
+import de.tum.cit.aet.artemis.exercise.domain.InitializationState;
 import de.tum.cit.aet.artemis.exercise.domain.Submission;
 import de.tum.cit.aet.artemis.exercise.domain.Team;
 import de.tum.cit.aet.artemis.exercise.domain.participation.Participation;
@@ -205,6 +206,8 @@ public class ProgrammingExerciseParticipationService {
         solutionParticipation.setBuildPlanId(newExercise.generateBuildPlanId(BuildPlanType.SOLUTION));
         solutionParticipation.setRepositoryUri(versionControlService.orElseThrow().getCloneRepositoryUri(newExercise.getProjectKey(), solutionRepoName).toString());
         solutionParticipation.setProgrammingExercise(newExercise);
+        solutionParticipation.setInitializationState(InitializationState.INITIALIZED);
+        solutionParticipation.setInitializationDate(ZonedDateTime.now());
         solutionParticipationRepository.save(solutionParticipation);
     }
 
@@ -219,6 +222,8 @@ public class ProgrammingExerciseParticipationService {
         TemplateProgrammingExerciseParticipation templateParticipation = new TemplateProgrammingExerciseParticipation();
         templateParticipation.setBuildPlanId(newExercise.generateBuildPlanId(BuildPlanType.TEMPLATE));
         templateParticipation.setRepositoryUri(versionControlService.orElseThrow().getCloneRepositoryUri(newExercise.getProjectKey(), exerciseRepoName).toString());
+        templateParticipation.setInitializationState(InitializationState.INITIALIZED);
+        templateParticipation.setInitializationDate(ZonedDateTime.now());
         templateParticipation.setProgrammingExercise(newExercise);
         newExercise.setTemplateParticipation(templateParticipation);
         templateParticipationRepository.save(templateParticipation);
@@ -255,7 +260,7 @@ public class ProgrammingExerciseParticipationService {
 
         if (coAuthor != null && coAuthor.getEmail() != null) {
             String name = coAuthor.getName() != null ? coAuthor.getName() : login;
-            commitMessage += String.format("\n\nCo-authored-by: %s <%s>", name, coAuthor.getEmail());
+            commitMessage += "\n\nCo-authored-by: %s <%s>".formatted(name, coAuthor.getEmail());
         }
 
         gitService.stageAllChanges(targetRepo);
