@@ -39,6 +39,7 @@ import de.tum.cit.aet.artemis.course.domain.Course;
 import de.tum.cit.aet.artemis.exam.domain.Exam;
 import de.tum.cit.aet.artemis.exam.domain.ExamUser;
 import de.tum.cit.aet.artemis.exam.domain.StudentExam;
+import de.tum.cit.aet.artemis.exam.dto.ExamRegistrationResultDTO;
 import de.tum.cit.aet.artemis.exam.dto.ExamStudentDTO;
 import de.tum.cit.aet.artemis.exam.dto.ExamUserAttendanceCheckDTO;
 import de.tum.cit.aet.artemis.exam.dto.ExamUserDTO;
@@ -76,7 +77,7 @@ class ExamUserIntegrationTest extends AbstractProgrammingIntegrationLocalCILocal
         var student2 = userUtilService.getUserByLogin(TEST_PREFIX + "student2");
         var student3 = userUtilService.getUserByLogin(TEST_PREFIX + "student3");
         var student4 = userUtilService.getUserByLogin(TEST_PREFIX + "student4");
-        course1 = courseUtilService.addEmptyCourse();
+        course1 = courseUtilService.addEnrolledEmptyCourse(TEST_PREFIX);
 
         // same registration number as in test pdf file
         student1.setRegistrationNumber("03756882");
@@ -129,9 +130,10 @@ class ExamUserIntegrationTest extends AbstractProgrammingIntegrationLocalCILocal
         examUserDTOs.add(examUserDTO1);
         examUserDTOs.add(examUserDTO2);
 
-        List<ExamUserDTO> responseNotFoundExamUsers = request.postListWithResponseBody("/api/exam/courses/" + course1.getId() + "/exams/" + exam1.getId() + "/students",
-                examUserDTOs, ExamUserDTO.class, OK);
-        assertThat(responseNotFoundExamUsers).isEmpty();
+        ExamRegistrationResultDTO result = request.postWithResponseBody("/api/exam/courses/" + course1.getId() + "/exams/" + exam1.getId() + "/students", examUserDTOs,
+                ExamRegistrationResultDTO.class, OK);
+        assertThat(result.notFoundStudents()).isNullOrEmpty();
+        assertThat(result.rejectedStaffUsers()).isNullOrEmpty();
         Exam exam = examRepository.findWithExamUsersById(exam1.getId()).orElseThrow();
         var examUsers = exam.getExamUsers();
         assertThat(examUsers).hasSize(2);
@@ -152,9 +154,10 @@ class ExamUserIntegrationTest extends AbstractProgrammingIntegrationLocalCILocal
         final var examUserDTOs = getExamUserDTOS();
 
         // add students to exam with respective registration numbers, same as in pdf test file
-        List<ExamUserDTO> responseNotFoundExamUsers = request.postListWithResponseBody("/api/exam/courses/" + course1.getId() + "/exams/" + exam1.getId() + "/students",
-                examUserDTOs, ExamUserDTO.class, OK);
-        assertThat(responseNotFoundExamUsers).isEmpty();
+        ExamRegistrationResultDTO result = request.postWithResponseBody("/api/exam/courses/" + course1.getId() + "/exams/" + exam1.getId() + "/students", examUserDTOs,
+                ExamRegistrationResultDTO.class, OK);
+        assertThat(result.notFoundStudents()).isNullOrEmpty();
+        assertThat(result.rejectedStaffUsers()).isNullOrEmpty();
 
         // upload exam user images
         var imageUploadResponse = request.performMvcRequest(buildUploadExamUserImages(course1.getId(), exam1.getId())).andExpect(status().isOk()).andReturn();
@@ -168,7 +171,7 @@ class ExamUserIntegrationTest extends AbstractProgrammingIntegrationLocalCILocal
         assertThat(exam.getExamUsers()).hasSize(4);
         for (ExamUser examUser : exam.getExamUsers()) {
             assertThat(examUser.getStudentImagePath()).isNotNull();
-            String requestUrl = String.format("%s%s", ARTEMIS_FILE_PATH_PREFIX, examUser.getStudentImagePath());
+            String requestUrl = "%s%s".formatted(ARTEMIS_FILE_PATH_PREFIX, examUser.getStudentImagePath());
             assertThat(request.getFile(requestUrl, HttpStatus.OK)).isNotEmpty();
         }
 
@@ -186,7 +189,7 @@ class ExamUserIntegrationTest extends AbstractProgrammingIntegrationLocalCILocal
         assertThat(exam.getExamUsers()).hasSize(4);
         for (ExamUser examUser : exam.getExamUsers()) {
             assertThat(examUser.getStudentImagePath()).isNotNull();
-            String requestUrl = String.format("%s%s", ARTEMIS_FILE_PATH_PREFIX, examUser.getStudentImagePath());
+            String requestUrl = "%s%s".formatted(ARTEMIS_FILE_PATH_PREFIX, examUser.getStudentImagePath());
             assertThat(request.getFile(requestUrl, HttpStatus.OK)).isNotEmpty();
         }
     }
@@ -314,7 +317,7 @@ class ExamUserIntegrationTest extends AbstractProgrammingIntegrationLocalCILocal
         assertThat(signedUsers).hasSize(1);
         for (var user : signedUsers) {
             assertThat(user.getSigningImagePath()).isNotNull();
-            String requestUrl = String.format("%s%s", ARTEMIS_FILE_PATH_PREFIX, user.getSigningImagePath());
+            String requestUrl = "%s%s".formatted(ARTEMIS_FILE_PATH_PREFIX, user.getSigningImagePath());
             assertThat(request.getFile(requestUrl, HttpStatus.OK)).isNotEmpty();
         }
     }
@@ -572,6 +575,23 @@ class ExamUserIntegrationTest extends AbstractProgrammingIntegrationLocalCILocal
 
     @Test
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
+    void testSearchUsersForExamRegistration_paginationIsStableAcrossPages() throws Exception {
+        // Regression test for issue #13069: consecutive pages must form a stable, non-overlapping partition of the
+        // matches, so no student shuffles between pages or disappears and becomes impossible to add to the exam. The
+        // precise ordering guarantee lives in the repository and is unit-tested in UserRepositoryStableSearchSortUnitTest;
+        // here we verify it end-to-end through the registration endpoint.
+        List<UserForRegistrationDTO> combined = new ArrayList<>();
+        combined.addAll(request.getList(searchUrl(course1.getId(), exam1.getId()), HttpStatus.OK, UserForRegistrationDTO.class, searchParams(TEST_PREFIX + "student", 0, 2)));
+        combined.addAll(request.getList(searchUrl(course1.getId(), exam1.getId()), HttpStatus.OK, UserForRegistrationDTO.class, searchParams(TEST_PREFIX + "student", 1, 2)));
+
+        assertThat(combined).extracting(UserForRegistrationDTO::login).doesNotHaveDuplicates().containsExactlyInAnyOrder(TEST_PREFIX + "student1", TEST_PREFIX + "student2",
+                TEST_PREFIX + "student3", TEST_PREFIX + "student4");
+        // The pages are served in ascending id order, so concatenating page 0 and page 1 yields a globally sorted list.
+        assertThat(combined).extracting(UserForRegistrationDTO::id).isSorted();
+    }
+
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
     void testSearchUsersForExamRegistration_noResultsForUnknownTerm() throws Exception {
         List<UserForRegistrationDTO> result = request.getList(searchUrl(course1.getId(), exam1.getId()), HttpStatus.OK, UserForRegistrationDTO.class,
                 searchParams("zzz_no_match_zzz", 0, 10));
@@ -697,7 +717,7 @@ class ExamUserIntegrationTest extends AbstractProgrammingIntegrationLocalCILocal
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
     void testExportExamUsers() throws Exception {
         List<ExamUserDTO> examUserDTOs = getExamUserDTOS();
-        request.postListWithResponseBody("/api/exam/courses/" + course1.getId() + "/exams/" + exam1.getId() + "/students", examUserDTOs, ExamUserDTO.class, OK);
+        request.postWithResponseBody("/api/exam/courses/" + course1.getId() + "/exams/" + exam1.getId() + "/students", examUserDTOs, ExamRegistrationResultDTO.class, OK);
 
         List<ExportExamUserDTO> exportedUsers = request.getList("/api/exam/courses/" + course1.getId() + "/exams/" + exam1.getId() + "/export-students", HttpStatus.OK,
                 ExportExamUserDTO.class);
