@@ -72,11 +72,11 @@ class ExerciseDateServiceTest extends AbstractSpringIntegrationIndependentBatchT
         SecurityUtils.setAuthorizationObject();
 
         userUtilService.addUsers(TEST_PREFIX, 3, 2, 0, 2);
-        course = modelingExerciseUtilService.addCourseWithOneModelingExercise();
+        course = modelingExerciseUtilService.addEnrolledCourseWithOneModelingExercise("ClassDiagram", TEST_PREFIX);
         exercise = ExerciseUtilService.getFirstExerciseWithType(course, ModelingExercise.class);
 
         for (int i = 1; i <= 3; ++i) {
-            var submission = ParticipationFactory.generateModelingSubmission(String.format("model%d", i), true);
+            var submission = ParticipationFactory.generateModelingSubmission("model%d".formatted(i), true);
             modelingExerciseUtilService.addModelingSubmission(exercise, submission, TEST_PREFIX + "student1");
         }
 
