@@ -10,7 +10,6 @@ import static org.mockito.Mockito.verify;
 
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -129,7 +128,7 @@ class ModelingAssessmentIntegrationTest extends AbstractSpringIntegrationIndepen
     @BeforeEach
     void initTestCase() throws Exception {
         userUtilService.addUsers(TEST_PREFIX, 6, 2, 0, 1);
-        this.course = modelingExerciseUtilService.addCourseWithDifferentModelingExercises();
+        this.course = modelingExerciseUtilService.addEnrolledCourseWithDifferentModelingExercises(TEST_PREFIX);
         classExercise = ExerciseUtilService.findModelingExerciseWithTitle(course.getExercises(), "ClassDiagram");
         activityExercise = ExerciseUtilService.findModelingExerciseWithTitle(course.getExercises(), "ActivityDiagram");
         objectExercise = ExerciseUtilService.findModelingExerciseWithTitle(course.getExercises(), "ObjectDiagram");
@@ -520,9 +519,9 @@ class ModelingAssessmentIntegrationTest extends AbstractSpringIntegrationIndepen
                 TEST_PREFIX + "student1");
         ModelingSubmission modelingSubmission2 = modelingExerciseUtilService.addModelingSubmissionFromResources(classExercise, "test-data/model-submission/model.one-element.json",
                 TEST_PREFIX + "student2");
-        createAssessment(modelingSubmission, Collections.singletonList(originalFeedback), "/assessment?submit=true", HttpStatus.OK);
+        createAssessment(modelingSubmission, List.of(originalFeedback), "/assessment?submit=true", HttpStatus.OK);
 
-        createAssessment(modelingSubmission2, Collections.singletonList(changedFeedback), "/assessment?submit=true", HttpStatus.OK);
+        createAssessment(modelingSubmission2, List.of(changedFeedback), "/assessment?submit=true", HttpStatus.OK);
 
         modelingAssessment = resultRepository.findDistinctWithFeedbackBySubmissionId(modelingSubmission2.getId()).orElseThrow();
         assertThat(modelingAssessment.getFeedbacks()).as("assessment is correctly stored").hasSize(1);
