@@ -3,11 +3,11 @@ package de.tum.cit.aet.artemis.programming;
 import static de.tum.cit.aet.artemis.core.util.RequestUtilService.parameters;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.within;
+import static org.mockito.Mockito.CALLS_REAL_METHODS;
 import static org.mockito.Mockito.any;
 import static org.mockito.Mockito.eq;
 import static org.mockito.Mockito.mockStatic;
 
-import java.io.File;
 import java.io.IOException;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
@@ -35,6 +35,8 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.EnumSource;
 import org.mockito.MockedStatic;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -43,9 +45,11 @@ import org.springframework.http.HttpStatus;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.util.LinkedMultiValueMap;
 
+import ch.qos.logback.classic.Level;
 import ch.qos.logback.classic.Logger;
 import ch.qos.logback.classic.spi.ILoggingEvent;
 import ch.qos.logback.core.read.ListAppender;
+import de.tum.cit.aet.artemis.account.domain.User;
 import de.tum.cit.aet.artemis.assessment.domain.AssessmentType;
 import de.tum.cit.aet.artemis.communication.domain.Post;
 import de.tum.cit.aet.artemis.core.service.TempFileUtilService;
@@ -71,6 +75,7 @@ import de.tum.cit.aet.artemis.programming.domain.build.BuildLogEntry;
 import de.tum.cit.aet.artemis.programming.dto.FileMove;
 import de.tum.cit.aet.artemis.programming.dto.RepositoryStatusDTO;
 import de.tum.cit.aet.artemis.programming.service.ProgrammingExerciseParticipationService;
+import de.tum.cit.aet.artemis.programming.service.RepositoryService;
 import de.tum.cit.aet.artemis.programming.util.LocalRepository;
 import de.tum.cit.aet.artemis.programming.util.RepositoryExportTestUtil;
 import de.tum.cit.aet.artemis.programming.web.repository.FileSubmission;
@@ -98,6 +103,12 @@ class RepositoryIntegrationTest extends AbstractProgrammingIntegrationLocalCILoc
     private final String currentLocalFileContent = "testContent";
 
     private final byte[] currentLocalBinaryFileContent = { (byte) 0b10101010, (byte) 0b11001100, (byte) 0b11110000 };
+
+    private final String textFileWithBinaryExtensionName = "gradlew.sh";
+
+    private final String textFileWithBinaryExtensionContent = "#!/bin/sh\necho hello\n";
+
+    private final String testRepositoryOnlyContent = "// content that only exists in the test repository";
 
     private final String currentLocalFolderName = "currentFolderName";
 
@@ -134,7 +145,7 @@ class RepositoryIntegrationTest extends AbstractProgrammingIntegrationLocalCILoc
     @BeforeEach
     void setup() throws Exception {
         userUtilService.addUsers(TEST_PREFIX, 2, 1, 1, 1);
-        course = programmingExerciseUtilService.addCourseWithOneProgrammingExerciseAndTestCases();
+        course = programmingExerciseUtilService.addEnrolledCourseWithOneProgrammingExerciseAndTestCases(TEST_PREFIX);
         programmingExercise = ExerciseUtilService.getFirstExerciseWithType(course, ProgrammingExercise.class);
         programmingExercise = programmingExerciseRepository.findWithEagerStudentParticipationsById(programmingExercise.getId()).orElseThrow();
 
@@ -276,6 +287,47 @@ class RepositoryIntegrationTest extends AbstractProgrammingIntegrationLocalCILoc
 
     @Test
     @WithMockUser(username = TEST_PREFIX + "tutor1", roles = "TA")
+    void testGetFilesWithContentSkipsUndecodableFilesWithoutWarning() throws Exception {
+        // The seeded repository contains a .jar whose bytes are not valid UTF-8. It can never be part of the response,
+        // because the content is returned as a String, so it is skipped. That is an entirely expected outcome and must
+        // not be reported as a problem: a Gradle wrapper jar alone used to produce a steady stream of log entries.
+        Logger repositoryServiceLogger = (Logger) LoggerFactory.getLogger(RepositoryService.class);
+        ListAppender<ILoggingEvent> appender = new ListAppender<>();
+        appender.start();
+        repositoryServiceLogger.addAppender(appender);
+        try {
+            var files = request.getMap(participationsBaseUrl + participation.getId() + "/repository/files-content", HttpStatus.OK, String.class, String.class);
+
+            assertThat(files).isNotEmpty();
+            // case-insensitive, because the extension classifier and the decoding both are
+            assertThat(files.keySet()).noneMatch(file -> file.toLowerCase().endsWith(".jar"));
+            assertThat(files).containsEntry(currentLocalFileName, currentLocalFileContent);
+            assertThat(appender.list).as("skipping content that is not valid UTF-8 must not be logged as a problem")
+                    .noneMatch(event -> event.getLevel().isGreaterOrEqual(Level.WARN) && event.getFormattedMessage().contains("could not be read"));
+        }
+        finally {
+            repositoryServiceLogger.detachAppender(appender);
+            appender.stop();
+        }
+    }
+
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "tutor1", roles = "TA")
+    void testGetFilesWithContentKeepsTextFilesWithBinaryExtensions() throws Exception {
+        // The extension classifier also lists formats that are plain text (.sh, .bat, .ll, .wast, .hex). Those must
+        // still be returned when the caller did not ask for binaries to be omitted, otherwise the code editor would
+        // silently lose them.
+        var files = request.getMap(participationsBaseUrl + participation.getId() + "/repository/files-content", HttpStatus.OK, String.class, String.class);
+
+        assertThat(files).containsEntry(textFileWithBinaryExtensionName, textFileWithBinaryExtensionContent);
+        // and it is still omitted when the caller asks for binaries to be left out
+        var withoutBinaries = request.getMap(participationsBaseUrl + participation.getId() + "/repository/files-content?omitBinaries=true", HttpStatus.OK, String.class,
+                String.class);
+        assertThat(withoutBinaries).doesNotContainKey(textFileWithBinaryExtensionName);
+    }
+
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "tutor1", roles = "TA")
     void testGetFilesWithOmitBinaries() throws Exception {
         var queryParams = "?omitBinaries=true";
         var files = request.getMap(participationsBaseUrl + participation.getId() + "/repository/files-content" + queryParams, HttpStatus.OK, String.class, String.class);
@@ -295,9 +347,9 @@ class RepositoryIntegrationTest extends AbstractProgrammingIntegrationLocalCILoc
     void testGetFilesAtCommitInstructorNotInCourseForbidden() throws Exception {
         prepareRepository();
         String commitHash = getCommitHash(studentRepository.workingCopyGitRepo);
-        courseUtilService.updateCourseGroups("abc", course, "");
+        User instructor1 = userUtilService.getUserByLogin(TEST_PREFIX + "instructor1");
+        userUtilService.unenrollUserFromCourse(instructor1, course);
         request.getMap(filesContentBaseUrl + commitHash + "&participationId=" + participation.getId(), HttpStatus.FORBIDDEN, String.class, String.class);
-        courseUtilService.updateCourseGroups(TEST_PREFIX, course, "");
     }
 
     @Test
@@ -305,9 +357,9 @@ class RepositoryIntegrationTest extends AbstractProgrammingIntegrationLocalCILoc
     void testGetFilesAtCommitTutorNotInCourseForbidden() throws Exception {
         prepareRepository();
         String commitHash = getCommitHash(studentRepository.workingCopyGitRepo);
-        courseUtilService.updateCourseGroups("abc", course, "");
+        User tutor1 = userUtilService.getUserByLogin(TEST_PREFIX + "tutor1");
+        userUtilService.unenrollUserFromCourse(tutor1, course);
         request.getMap(filesContentBaseUrl + commitHash + "&participationId=" + participation.getId(), HttpStatus.FORBIDDEN, String.class, String.class);
-        courseUtilService.updateCourseGroups(TEST_PREFIX, course, "");
     }
 
     @Test
@@ -315,9 +367,9 @@ class RepositoryIntegrationTest extends AbstractProgrammingIntegrationLocalCILoc
     void testGetFilesAtCommitEditorNotInCourseForbidden() throws Exception {
         prepareRepository();
         String commitHash = getCommitHash(studentRepository.workingCopyGitRepo);
-        courseUtilService.updateCourseGroups("abc", course, "");
+        User editor1 = userUtilService.getUserByLogin(TEST_PREFIX + "editor1");
+        userUtilService.unenrollUserFromCourse(editor1, course);
         request.getMap(filesContentBaseUrl + commitHash + "&participationId=" + participation.getId(), HttpStatus.FORBIDDEN, String.class, String.class);
-        courseUtilService.updateCourseGroups(TEST_PREFIX, course, "");
     }
 
     @Disabled
@@ -340,6 +392,69 @@ class RepositoryIntegrationTest extends AbstractProgrammingIntegrationLocalCILoc
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
     void testGetFilesWithContentAtCommitParticipationNotFound() throws Exception {
         request.getMap(filesContentBaseUrl + "abc&participationId=" + UUID.randomUUID().getLeastSignificantBits(), HttpStatus.NOT_FOUND, String.class, String.class);
+    }
+
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
+    void testGetFilesAtCommitWithoutParticipationIdBadRequest() throws Exception {
+        request.getMap(filesContentBaseUrl + "HEAD", HttpStatus.BAD_REQUEST, String.class, String.class);
+    }
+
+    /**
+     * Selecting a repository via {@code repositoryType} is an editor-level operation. A plain student may read only their own participation repository, so every repository
+     * type must be rejected with 403.
+     */
+    @ParameterizedTest
+    @EnumSource(RepositoryType.class)
+    @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
+    void testGetFilesAtCommitWithRepositoryTypeRequiresEditorForStudent(RepositoryType repositoryType) throws Exception {
+        prepareRepository();
+        String commitHash = getCommitHash(studentRepository.workingCopyGitRepo);
+        request.getMap(filesContentBaseUrl + commitHash + "&participationId=" + participation.getId() + "&repositoryType=" + repositoryType.name(), HttpStatus.FORBIDDEN,
+                String.class, String.class);
+    }
+
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "tutor1", roles = "TA")
+    void testGetFilesAtCommitWithRepositoryTypeRequiresEditorForTutor() throws Exception {
+        prepareRepository();
+        String commitHash = getCommitHash(studentRepository.workingCopyGitRepo);
+        request.getMap(filesContentBaseUrl + commitHash + "&participationId=" + participation.getId() + "&repositoryType=TESTS", HttpStatus.FORBIDDEN, String.class, String.class);
+    }
+
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "editor1", roles = "EDITOR")
+    void testGetFilesAtCommitWithRepositoryTypeAllowedForEditor() throws Exception {
+        String markerFileName = commitFileOnlyInTestRepository();
+
+        var files = request.getMap(filesContentBaseUrl + "HEAD&participationId=" + participation.getId() + "&repositoryType=TESTS", HttpStatus.OK, String.class, String.class);
+
+        assertThat(files).containsEntry(markerFileName, testRepositoryOnlyContent);
+    }
+
+    @Test
+    @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
+    void testGetFilesAtCommitWithRepositoryTypeAllowedForInstructor() throws Exception {
+        String markerFileName = commitFileOnlyInTestRepository();
+
+        var files = request.getMap(filesContentBaseUrl + "HEAD&participationId=" + participation.getId() + "&repositoryType=TESTS", HttpStatus.OK, String.class, String.class);
+
+        assertThat(files).containsEntry(markerFileName, testRepositoryOnlyContent);
+    }
+
+    /**
+     * Commits a file that exists only in the test repository. Its presence in a response therefore proves the response was served from the test repository and not from the
+     * participation repository, which the setup seeds with the same default content.
+     *
+     * @return the name of the committed file
+     */
+    private String commitFileOnlyInTestRepository() throws Exception {
+        String markerFileName = "TestRepositoryMarker.java";
+        FileUtils.writeStringToFile(testsRepository.workingCopyGitRepoFile.toPath().resolve(markerFileName).toFile(), testRepositoryOnlyContent, StandardCharsets.UTF_8);
+        testsRepository.workingCopyGitRepo.add().addFilepattern(".").call();
+        GitService.commit(testsRepository.workingCopyGitRepo).setMessage("add test repository marker").call();
+        testsRepository.workingCopyGitRepo.push().setRemote("origin").call();
+        return markerFileName;
     }
 
     private void prepareRepository() throws GitAPIException, IOException {
@@ -367,12 +482,12 @@ class RepositoryIntegrationTest extends AbstractProgrammingIntegrationLocalCILoc
     @Test
     @WithMockUser(username = TEST_PREFIX + "tutor1", roles = "TA")
     void testGetFilesWithContent_shouldNotThrowException() throws Exception {
-        MockedStatic<FileUtils> mockedFileUtils = mockStatic(FileUtils.class);
-        mockedFileUtils.when(() -> FileUtils.readFileToString(any(File.class), eq(StandardCharsets.UTF_8))).thenThrow(IOException.class);
+        MockedStatic<Files> mockedFiles = mockStatic(Files.class, CALLS_REAL_METHODS);
+        mockedFiles.when(() -> Files.readString(any(Path.class), eq(StandardCharsets.UTF_8))).thenThrow(IOException.class);
 
         var files = request.getMap(participationsBaseUrl + participation.getId() + "/repository/files-content", HttpStatus.OK, String.class, String.class);
         assertThat(files).isEmpty();
-        mockedFileUtils.close();
+        mockedFiles.close();
     }
 
     @Test
@@ -1094,7 +1209,7 @@ class RepositoryIntegrationTest extends AbstractProgrammingIntegrationLocalCILoc
 
     private ProgrammingExercise createProgrammingExerciseForExam() {
         // Create an exam programming exercise
-        var programmingExercise = programmingExerciseUtilService.addCourseExamExerciseGroupWithOneProgrammingExerciseAndTestCases();
+        var programmingExercise = programmingExerciseUtilService.addEnrolledCourseExamExerciseGroupWithOneProgrammingExerciseAndTestCases(TEST_PREFIX);
         programmingExerciseRepository.save(programmingExercise);
         participation.setExercise(programmingExercise);
         studentParticipationRepository.save(participation);
@@ -1159,6 +1274,8 @@ class RepositoryIntegrationTest extends AbstractProgrammingIntegrationLocalCILoc
 
         FileUtils.writeStringToFile(workingDir.resolve(currentLocalFileName).toFile(), currentLocalFileContent, StandardCharsets.UTF_8);
         FileUtils.writeByteArrayToFile(workingDir.resolve(currentLocalFileName + ".jar").toFile(), currentLocalBinaryFileContent);
+        // .sh is on the binary extension list but is plain text, so it must survive when binaries are not omitted
+        FileUtils.writeStringToFile(workingDir.resolve(textFileWithBinaryExtensionName).toFile(), textFileWithBinaryExtensionContent, StandardCharsets.UTF_8);
         Path folderPath = workingDir.resolve(currentLocalFolderName);
         Files.createDirectories(folderPath);
         FileUtils.writeStringToFile(folderPath.resolve(".keep").toFile(), "", java.nio.charset.StandardCharsets.UTF_8);
