@@ -13,7 +13,6 @@ import java.nio.charset.StandardCharsets;
 import java.util.Objects;
 import java.util.Optional;
 
-import org.apache.commons.io.IOUtils;
 import org.codeability.sharing.plugins.api.ShoppingBasket;
 import org.eclipse.jgit.api.errors.GitAPIException;
 import org.junit.jupiter.api.AfterEach;
@@ -219,13 +218,13 @@ class ExerciseSharingServiceTest extends AbstractSpringIntegrationLocalCILocalVC
     @Test
     @WithMockUser(username = INSTRUCTOR1, roles = "INSTRUCTOR")
     void testImportProgrammingExerciseFromSharing() throws URISyntaxException, IOException, GitAPIException, SharingException {
-        userUtilService.addInstructor("Sharing", INSTRUCTOR1);
+        userUtilService.addInstructor(INSTRUCTOR1);
         mockSampleBasketZipForToken(SAMPLE_BASKET_TOKEN);
 
         SecurityContextHolder.getContext().setAuthentication(AuthenticationFactory.createUsernamePasswordAuthentication(INSTRUCTOR1.toLowerCase()));
 
         ProgrammingExercise exercise = getExerciseInfoFromBasket();
-        Course course1 = programmingExerciseUtilService.addCourseWithOneProgrammingExerciseAndTestCases();
+        Course course1 = programmingExerciseUtilService.addEnrolledCourseWithOneProgrammingExerciseAndTestCases(TEST_PREFIX);
         SharingInfoDTO sharingInfo = new SharingInfoDTO(SAMPLE_BASKET_TOKEN, TEST_RETURN_URL, SharingPlatformMockProvider.SHARING_BASEURL_PLUGIN,
                 SharingPlatformMockProvider.calculateCorrectChecksum(sharingPlatformMockProvider.getTestSharingApiKey(), "returnURL", TEST_RETURN_URL, "apiBaseURL",
                         SharingPlatformMockProvider.SHARING_BASEURL_PLUGIN),
@@ -265,7 +264,7 @@ class ExerciseSharingServiceTest extends AbstractSpringIntegrationLocalCILocalVC
     private void mockSampleBasketLoadingForToken(String basketToken) throws URISyntaxException, IOException {
         URI basketJSONURI = new URI(SharingPlatformMockProvider.SHARING_BASEURL_PLUGIN + "/basket/" + basketToken);
         try (InputStream in = Objects.requireNonNull(getClass().getResource("./basket/sampleBasket.json")).openStream()) {
-            String basketJSON = IOUtils.toString(in, StandardCharsets.UTF_8);
+            String basketJSON = new String(in.readAllBytes(), StandardCharsets.UTF_8);
             final ResponseActions responseActionsJSON = sharingPlatformMockProvider.getMockSharingServer().expect(ExpectedCount.once(), requestTo(basketJSONURI))
                     .andExpect(method(HttpMethod.GET));
             responseActionsJSON.andRespond(MockRestResponseCreators.withSuccess(basketJSON, MediaType.APPLICATION_JSON));
